--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,18 @@ spring.data.mongodb.port=27017
 #spring.data.mongodb.authentication-database=[authentication_database]
 #spring.data.mongodb.username=[username]
 #spring.data.mongodb.password=[password]
+
+api.version=1.0
+swagger.enabled=true
+swagger.title=spring-boot-rest-mongodb
+swagger.description=Sample Swagger implementation for the `spring-boot-rest-mongodb` service, leveraging annotations at the controller-method level.
+swagger.useDefaultResponseMessages=false
+swagger.enableUrlTemplating=false
+swagger.deepLinking=true
+swagger.defaultModelsExpandDepth=1
+swagger.defaultModelExpandDepth=1
+swagger.displayOperationId=false
+swagger.displayRequestDuration=false
+swagger.filter=false
+swagger.maxDisplayedTags=0
+swagger.showExtensions=false;
